# OpcUaFileServer

./: .gitignore  Dockerfile  README.rst  start.bat
doc/doxygen/: Doxyfile
docs/source/: conf.py  glossary.rst  index.rst
docs/source/1_getting_started/: installation.rst  overview.rst
src/: CMakeLists.txt
src/OpcUaFileServer/: CMakeLists.txt
src/OpcUaFileServer/Config/: OpcUaFileServer.xml  OpcUaServer.xml
src/OpcUaFileServer/DataLayer/: FileServerFSConfig.h  FileSystemAccess.cpp  FileSystemAccess.h  FileSystemIf.cpp  FileSystemIf.h
src/OpcUaFileServer/OpcUaLayer/: FileDirectoryObject.cpp  FileDirectoryObject.h  FileObject.cpp  FileObject.h  FileServerOpcUaConfig.h
src/OpcUaFileServer/Util/: FileMode.cpp  FileMode.h  FileServerConfig.cpp  FileServerConfig.h  ResultCode.cpp  ResultCode.h
src/OpcUaFileServer/linux/etc/init/: OpcUaFileServer.conf.in
src/OpcUaFileServer/linux/etc/init.d/: OpcUaFileServer.in
src/OpcUaFileServer/linux/script/: postinst  prerm
src/OpcUaFileServer/linux/usr/lib/systemd/system/: OpcUaFileServer.service.in
tst/: Config.py  runtest.sh
tst/File/: FileCreateDeleteTest.py
tst/Session/: ConnectionTest.py
